--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,17 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+    <h2>Condición de busqueda</h2>
+    <% if (condicion.user=='Fernando') { %>
+    <p>111</p>
+    <% } %>
+
+    <h2>Anuncios</h2>
+    <% users.forEach((user)=> { %>
+      <p><%= user.nombre %></p>
+      <p><%= user.precio %></p>
+    <% }) %>
+
   </body>
 </html>
